# MinecraftInstallManager

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml  python-publish.yml
src/mim/: mim.py
src/mim/util/: GeyserRepository.py  GithubRepository.py  ModrinthRepository.py  Repository.py
src/mpm/: mpm.py
src/mpm/util/: GithubRepository.py  ModrinthRepository.py  PaperRepository.py  SpigetRepository.py
tests/: config.json  conftest.py  test_mim.py  test_mpm.py
tests/util/: conftest.py  test_GeyserRepository.py  test_GithubRepository.py  test_ModrinthRepository.py  test_PaperRepository.py  test_SpigetRepository.py
