[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-install-manager"
version = "1.0.1"
description = "A small CLI to find and download Minecraft server plugins from multiple repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "thehappykraken" }
]
dependencies = [
    "requests",
    "pyyaml"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thehappykraken/MinecraftPluginManager"
Source = "https://github.com/thehappykraken/MinecraftPluginManager"

[project.scripts]
mim = "mim.mim:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
